tests/parsing/smtlib/v2.7/errors/049_assert_unclosed_2.smt2
(set-logic ALL)
(assert true _)
